--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 	  <div class="row">
 		<div class="col-sm-4">
 			
-		  <p>&copy 2020 MG Just. Site made with <a href="https://jekyllrb.com">Jekyll</a> and based on the <a href="https://www.allanlab.org/aboutwebsite.html">Allan Lab theme</a></p>
+		  <p>&copy 2020 MG Just. Site made with <a href="https://jekyllrb.com">Jekyll</a> based on the <a href="https://www.allanlab.org/aboutwebsite.html">Allan Lab theme</a></p>
 		   <p>  </p><p>
             		  
             
@@ -15,7 +15,7 @@
 		</div>
 		<div class="col-sm-4">
 		  Contact:<br />
-		  Department of Entomology and Plant Pathology<br />
+		  Dept of Entomology and Plant Pathology<br />
 		  NC State University<br />
 		  Raleigh, NC 27695<br />
 		  USA <br />
