seeing if fa icon works in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,11 @@
 		  - <a href="https://nifa.usda.gov/">USDA NIFA </a>
 		</div>
 		<div class="col-sm-4">
+			<ul class="social-media-list">
+			  <li><a href="https://github.com/mgjust"><i class="fa fa-github"></i> <span class="username">mgjust</span></a></li>
+			</ul>
+		   </div>
+		<div class="col-sm-4">
 		  Contact:<br />
 		  Dept of Entomology and Plant Pathology<br />
 		  NC State University<br />
