--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,19 +1,12 @@
 <div id="footer" class="panel">
   <div class="panel-footer">
 	<div class="container-fluid">
-	  <div class="row">
-		<div class="col-sm-3">
-			
-		  <p>&copy 2020 MG Just. Site made with <a href="https://jekyllrb.com">Jekyll</a> based on the <a href="https://www.allanlab.org/aboutwebsite.html">Allan Lab theme</a></p>
-		   <p>  </p><p>
-            		  
-            
-		</div>
-		<div class="col-sm-3">
-		  Funding:<br />
+	  <div class="row">    
+		<div class="col-sm-4">
+		  Current Funding:<br />
 		  - <a href="https://nifa.usda.gov/">USDA NIFA </a>
 		</div>
-		<div class="col-sm-3">
+		<div class="col-sm-4">
 		  Contact:<br />
 		  Dept of Entomology and Plant Pathology<br />
 		  NC State University<br />
@@ -21,11 +14,17 @@
 		  USA <br />
             (<a href="https://goo.gl/maps/4V6tSXQsRvy8TPSL9">Map</a>)
 		</div>
-		<div class="col-sm-3">
+		<div class="col-sm-4">
 			<ul class="social-media-list">
 			  <li><a href="https://github.com/mgjust"><i class="fa fa-github"></i> <span class="username">mgjust</span></a></li>
+			  <li><a href="https://github.com/mgjust"><i class="ai ai-orcid"></i> <span class="username">mgjust</span></a></li>
 			</ul>
 		</div>
+		<div class="col-sm-12">
+			
+			<p>&copy 2020 MG Just. Site made with <a href="https://jekyllrb.com">Jekyll</a> based on the <a href="https://www.allanlab.org/aboutwebsite.html">Allan Lab theme</a></p>
+			 <p>  </p><p>
+		</div>  
 	  </div>
 	</div>
   </div>
