academic icon trial 3

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
 		<div class="col-sm-4">
 			<ul class="social-media-list">
 			  <li><a href="https://github.com/mgjust"><i class="fa fa-github"></i> <span class="username">mgjust</span></a></li>
-			  <li><a href="https://github.com/mgjust"><i class="ai ai-google-scholar-square fa-3x"></i> <span class="username">mgjust</span></a></li>
+			  <li><a href="https://scholar.google.com/citations?user=9ObOkI4AAAAJ"><i class="ai ai-google-scholar-square ai-3x"></i> <span class="username">mgjust</span></a></li>
 			</ul>
 		</div>
 		<div class="col-sm-12">
