--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,26 +2,17 @@
   <div class="panel-footer">
 	<div class="container-fluid">
 	  <div class="row">    
-		<div class="col-sm-4">
-		  Current Funding:<br />
-		  - <a href="https://nifa.usda.gov/">USDA NIFA </a>
-		</div>
-		<div class="col-sm-4">
-		  Contact:<br />
-		  Dept of Entomology and Plant Pathology<br />
-		  NC State University<br />
-		  Raleigh, NC 27695<br />
-		  USA <br />
-            (<a href="https://goo.gl/maps/4V6tSXQsRvy8TPSL9">Map</a>)
-		</div>
-		<div class="col-sm-4">
-			<ul class="social-media-list">
-			  <li><a href="https://github.com/mgjust"><i class="fa fa-github"></i> <span class="username">mgjust</span></a></li>
-			  <li><a href="https://scholar.google.com/citations?user=9ObOkI4AAAAJ"><i class="ai ai-google-scholar-square ai-3x"></i> <span class="username">mgjust</span></a></li>
-			</ul>
+		<div class="col-sm-12">
+			<span class="social-media-list">
+			  <a href="mailto:&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#109;&#106;&#117;&#115;&#116;&#64;&#110;&#99;&#115;&#117;&#46;&#101;&#100;&#117;"><i class ="fa fa=envelope"></i></a>
+			  <a href="https://scholar.google.com/citations?user=9ObOkI4AAAAJ" target="_blank" title="GitHub"><i class="ai ai-google-scholar"></i></a>
+			  <a href="https://orcid.org/0000-0003-2493-9269" target="_blank" title="ORCID"><i class="ai ai-orcid"></i></a>
+			  <a href="https://github.com/mgjust" target="_blank" title="GitHub"><i class="fa fa-github"></i></a>
+			  <a href="https://twitter.com/MichaelGJust" target="_blank" title="Twitter"><i class="fa fa-twitter"></i></a>
+			</span>
 		</div>
 		<div class="col-sm-12">
-			
+			<br />
 			<p>&copy 2020 MG Just. Site made with <a href="https://jekyllrb.com">Jekyll</a> based on the <a href="https://www.allanlab.org/aboutwebsite.html">Allan Lab theme</a></p>
 			 <p>  </p><p>
 		</div>  
