--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,13 +3,15 @@
 	<div class="container-fluid">
 	  <div class="row">    
 		<div class="col-sm-12">
-			<span class="social-media-list">
-			  <a href="mailto:&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#109;&#106;&#117;&#115;&#116;&#64;&#110;&#99;&#115;&#117;&#46;&#101;&#100;&#117;"><i class ="fa fa=envelope"></i></a>
-			  <a href="https://scholar.google.com/citations?user=9ObOkI4AAAAJ" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar"></i></a>
-			  <a href="https://orcid.org/0000-0003-2493-9269" target="_blank" title="ORCID"><i class="ai ai-orcid"></i></a>
-			  <a href="https://github.com/mgjust" target="_blank" title="GitHub"><i class="fa fa-github"></i></a>
-			  <a href="https://twitter.com/MichaelGJust" target="_blank" title="Twitter"><i class="fa fa-twitter"></i></a>
-			</span>
+			<div class="centerBlock">
+				<span class="social-media-list">
+			  	<a href="mailto:&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#109;&#106;&#117;&#115;&#116;&#64;&#110;&#99;&#115;&#117;&#46;&#101;&#100;&#117;"><i class ="fa fa-envelope fa-5x"></i></a>
+			  	<a href="https://scholar.google.com/citations?user=9ObOkI4AAAAJ" target="_blank" title="Google Scholar"><i class="ai ai-google-scholar ai-5x"></i></a>
+			  	<a href="https://orcid.org/0000-0003-2493-9269" target="_blank" title="ORCID"><i class="ai ai-orcid ai-5x"></i></a>
+			  	<a href="https://github.com/mgjust" target="_blank" title="GitHub"><i class="fa fa-github fa-5x"></i></a>
+			  	<a href="https://twitter.com/MichaelGJust" target="_blank" title="Twitter"><i class="fa fa-twitter fa-5x"></i></a>
+				</span>
+			</div>
 		</div>
 		<div class="col-sm-12">
 			<br />
